Add meta tags for search engines

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width= , initial-scale=1.0">
-    <!--Title-->
+    <!-- Meta tags for serach engines -->
+    <meta name="description" content="35mm Photography. Portrait photographer. Black and white photography. Dublin, Ireland.">
+    <meta name="keywords" content="photographer, photo, black and white, portrait, Dublin, Ireland">
+    <!-- Title -->
     <title>35mm</title>
-    <!--Favicon-->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
