Create logo for header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,24 @@
   </head>
   <body>
     <!-- Header -->
-    <header> Header </header>
+    <header>
+        <div class="header-logo">
+            <a href="index.html">
+                <h1 id="logo">
+                    <img src="assets/pictures/favicon.png" alt="35mm Photography">
+                </h1>
+            </a>
+        </div class="header-menu">
+            <nav>
+                <li><a href="">About</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contact</a></li>
+            </nav>
+        <div>
+
+
+        </div>
+    </header>
     <!-- Main content -->
     <main>Main content</main>
     <!-- Footer -->
