--- a/index.html
+++ b/index.html
@@ -17,25 +17,23 @@
     <link rel="Stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <!-- Header -->
-    <header>
-        <div class="header-logo">
+    <!-- Header contains of logo and nav bar -->
+    <header>        
+        <div class="navigation">
             <a href="index.html">
-                <h1 id="logo">
-                    <img src="assets/pictures/favicon.png" alt="35mm Photography">
-                </h1>
+                <img id="logo" src="assets/pictures/favicon.png" alt="35mm Photography logo">
             </a>
-        </div class="header-menu">
-            <nav>
-                <li><a href="">About</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contact</a></li>
-            </nav>
-        <div>
-
-
+        <!-- Main navigation menu -->
+        <nav>
+            <ul id="menu">
+                <li><a href="about.html" aria-label="Link to About section">About</a></li>
+                <li><a href="portfolio.html" aria-label="Link to Portfolio section">Portfolio</a></li>
+                <li><a href="contact.html" aria-label="Contact Form">Contact</a></li>
+            </ul>
+         </nav>
         </div>
     </header>
+
     <!-- Main content -->
     <main>Main content</main>
     <!-- Footer -->
