--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Main navigation menu -->
         <nav>
             <ul id="menu">
-                <li><a href="about.html" aria-label="Link to About section">About</a></li>
+                <li><a href="about.html" class="active" aria-label="Link to About and Home section">About</a></li>
                 <li><a href="portfolio.html" aria-label="Link to Portfolio section">Portfolio</a></li>
                 <li><a href="contact.html" aria-label="Contact Form">Contact</a></li>
             </ul>
