--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon_io/favicon-16x16.png">
     <!-- Stylesheet -->
     <link rel="Stylesheet" href="assets/css/style.css">
+    <!-- Social Media icons link-->
+    <script src="https://kit.fontawesome.com/3d32bfd3da.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- Header contains of logo and nav bar -->
@@ -37,6 +39,21 @@
     <!-- Main content -->
     <main>Main content</main>
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <div class="footer-social">
+            <ul id="social">
+                <li>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Link to officail Instagram account"><i class="fa-brands fa-instagram fa-2xl" style="color: #000000;"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Link to officail Youtube account"><i class="fa-brands fa-youtube fa-2xl" style="color: #000000;"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Link to officail Facebook account"><i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i></a>
+                </li>
+            </ul>
+        </div>
+
+    </footer>
   </body>
 </html>
