Updated Enquiry Form

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             <!-- Main navigation menu -->
             <nav>
                 <ul id="menu">
-                    <li><a href="about.html" aria-label="Link to About and Home section">About</a></li>
+                    <li><a href="index.html" aria-label="Link to About and Home section">About</a></li>
                     <li><a href="portfolio.html" aria-label="Link to Portfolio section">Portfolio</a></li>
                     <li><a href="contact.html" class="active" aria-label="Contact Form">Contact</a></li>
                 </ul>
