Updated About section with text and Image

--- a/index.html
+++ b/index.html
@@ -36,11 +36,48 @@
         </div>
     </header>
 
-    <!-- Main content -->
-    <main>Main content</main>
+    <!-- About section -->
+    <main>
+        <div class="container container-two-cols grid">
+            <div class="left-col">
+                <h2 >About</h2>
+                <br>
+                <p class="about-text">
+                    Amelia Allen is a lifestyle, portrait and documentary photographer from Somerset who now lives and works in London.
+                    <br>
+                    <br>
+                    Starting her career in fashion photography at the age of 18, it was on the sets of high end brand campaigns and fashion
+                    shows that Amelia learnt the technicalities of what has become her signature style. Having always been drawn to
+                    sociological documentary photography, Amelia applies her classic and energetic style seamlessly to her portraiture and
+                    documentary projects.
+                    <br>
+                    <br>
+                    Her first book Naked Britain published in 2017 by Kehrer Verlag, was created over two years, during which she visited
+                    numerous british nudist camps, photographing naturists and their community and immersing herself in this world by
+                    photographing the book while also naked herself. You can see some of these images here.
+                    <br>
+                    <br>
+                    This sparked her interest in exploring the female form and women's role in modern society which led on to being in an
+                    exhibition and book in The Houses of Parliament (209 Women) and photographing the official women's rights marches and
+                    campaigns during the centennial year (2018) that women won the right to vote in Britain. Amelia is currently working on
+                    a second book on this subject.
+                    <br>
+                    <br>
+                    She now hosts regular workshops and body positivity photography sessions photographing members of the public nude and in
+                    a raw and unretouched style to celebrate the diversity and variety of bodies that we don't always see in modern media.
+                    This started on International Women's Day and is now regularly held at Soho House, FORA and Agdon House. You can see
+                    some of these images here.
+                </p>
+                <br>
+            </div>
+            <div class="left-image">
+                <img class="about-page" src="assets/pictures/trial.jpg" alt="Photographer">
+            </div>
+        </div>
+    </main>
     <!-- Footer -->
     <footer>
-        <div class="footer-social">
+        <div class="about">
             <ul id="social">
                 <li>
                     <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Link to officail Instagram account"><i class="fa-brands fa-instagram fa-2xl" style="color: #000000;"></i></a>
