--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <header>
         <div class="navigation">
             <a href="index.html">
-                <img id="logo" src="assets/pictures/favicon.png" alt="35mm Photography logo">
+                <img id="logo" src="assets/pictures/LOGO.png" alt="35mm Photography logo">
             </a>
             <!-- Main navigation menu -->
             <nav>
