--- a/contact.html
+++ b/contact.html
@@ -24,19 +24,17 @@
 <body>
     <!-- Header contains of logo and nav bar -->
     <header>
-        <div class="navigation">
-            <a href="index.html">
-                <img id="logo" src="assets/pictures/LOGO.png" alt="35mm Photography logo">
-            </a>
-            <!-- Main navigation menu -->
-            <nav>
-                <ul id="menu">
-                    <li><a href="index.html" aria-label="Link to About and Home section">About</a></li>
-                    <li><a href="portfolio.html" aria-label="Link to Portfolio section">Portfolio</a></li>
-                    <li><a href="contact.html" class="active" aria-label="Contact Form">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <a href="index.html">
+            <img id="logo" src="assets/pictures/LOGO.png" alt="35mm Photography logo">
+        </a>
+        <!-- Main navigation menu -->
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html" class="active" aria-label="Link to About and Home section">About</a></li>
+                <li><a href="portfolio.html" aria-label="Link to Portfolio section">Portfolio</a></li>
+                <li><a href="contact.html" aria-label="Contact Form">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Inquiry Form -->
