--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <header>        
         <a href="index.html">
             <img id="logo" src="assets/pictures/LOGO.png" alt="35mm Photography logo">
+        </a>
     <!-- Main navigation menu -->
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active" aria-label="Link to About and Home section">About</a></li>
