--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
     <!-- Main navigation menu -->
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-sharp fa-solid fa-ellipsis-vertical"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active" aria-label="Link to About and Home section">About</a></li>
@@ -38,11 +38,43 @@
 
     <!-- About section -->
     <main>
-        
+        <section id="about"></section>
+            <div id="about-section">
+                <div id="about-text">
+                    <div>
+                        <h2>About</h2>
+                        <br>
+                        <p>Shauna James is a fashion and portrait photographer from Donegal who now lives and works in Dublin.
+                        </p>
+                        <br>
+                        <p>
+                        Starting her career, Shauna first picked up a camera at the early age of fourteen - influenced by self-portraiture
+                        and conceptual photography.
+                        Growing up with the rise of social media and digital techniques enabled Shauna to see the bigger picture of an
+                        international industry.
+                        After graduating college in Letterkenny Co. Donegal she made the move to Dublin, where she naturally felt the
+                        transition to fashion photography.
+                        </p>
+                        <br>
+                        <p>
+                        Shauna enjoys creating timeless and emotive imagery. She is inspired by feminine strength, unique beauty and lasting
+                        style.
+                        </p>
+                        <br>
+                        <p>
+                        She now hosts regular workshops and body positivity photography sessions photographing members of the public and in
+                        a raw and unretouched style
+                        to celebrate the diversity and variety of bodies that we don't always see in modern media.
+                        </p>
+                    </div>
+                </div>
+                <div id="about-image">
+                    <div id="about-img"><img src="assets/pictures/about.jpg" alt="Photographer" id="about-image-file"></div>
+                </div>
+            </div>
     </main>
     <!-- Footer -->
     <footer>
-        <div class="social-footer">
             <ul id="social">
                 <li>
                     <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Link to official Instagram account"><i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i></a>
@@ -54,8 +86,6 @@
                     <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Link to official Facebook account"><i class="fa-brands fa-instagram fa-2xl" style="color: #000000;"></i></a>
                 </li>
             </ul>
-        </div>
-
     </footer>
   </body>
 </html>
