--- a/portfolio.html
+++ b/portfolio.html
@@ -29,8 +29,8 @@
         <!-- Main navigation menu -->
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active" aria-label="Link to About and Home section">About</a></li>
-                <li><a href="portfolio.html" aria-label="Link to Portfolio section">Portfolio</a></li>
+                <li><a href="index.html" aria-label="Link to About and Home section">About</a></li>
+                <li><a href="portfolio.html" class="active" aria-label="Link to Portfolio section">Portfolio</a></li>
                 <li><a href="contact.html" aria-label="Contact Form">Contact</a></li>
             </ul>
         </nav>
@@ -40,26 +40,17 @@
     <main>Main content</main>
     <!-- Footer -->
     <footer>
-        <div class="footer-social">
             <ul id="social">
                 <li>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                        aria-label="Link to officail Instagram account"><i class="fa-brands fa-instagram fa-2xl"
-                            style="color: #000000;"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Link to official Instagram account"><i class="fa-brands fa-facebook fa-2xl" style="color: #000000;"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.twitter.com" target="_blank" rel="noopener"
-                        aria-label="Link to officail Youtube account"><i class="fa-brands fa-youtube fa-2xl"
-                            style="color: #000000;"></i></a>
+                    <a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Link to official Youtube account"><i class="fa-brands fa-twitter fa-2xl" style="color: #000000;"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com" target="_blank" rel="noopener"
-                        aria-label="Link to officail Facebook account"><i class="fa-brands fa-facebook fa-2xl"
-                            style="color: #000000;"></i></a>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Link to official Facebook account"><i class="fa-brands fa-instagram fa-2xl" style="color: #000000;"></i></a>
                 </li>
             </ul>
-        </div>
-
     </footer>
 </body>
 
