Portfolio section updated

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <!-- About section -->
     <main>
         <section id="about"></section>
-            <div id="about-section">
+            <div>
                 <div id="about-text">
-                    <div>
+                    <div id="about-text-info">
                         <h2>About</h2>
                         <br>
                         <p>Shauna James is a fashion and portrait photographer from Donegal who now lives and works in Dublin.
