--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,9 @@
     <header>
         <a href="index.html">
             <img id="logo" src="assets/pictures/LOGO.png" alt="35mm Photography logo">
-        <!-- Main navigation menu -->
+    <!-- Main navigation menu -->
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label"><i class="fa-sharp fa-solid fa-ellipsis-vertical"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html" aria-label="Link to About and Home section">About</a></li>
@@ -37,7 +39,28 @@
     </header>
 
     <!-- Main content -->
-    <main>Main content</main>
+    <main>
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets/pictures/1.jpg" alt="bw portarit">
+                <img src="assets/pictures/2.jpg" alt="bw portarit">
+                <img src="assets/pictures/3.jpg" alt="bw portarit">
+                <img src="assets/pictures/4.jpg" alt="bw portarit">
+                <img src="assets/pictures/5.jpg" alt="bw portarit">
+                <img src="assets/pictures/6.jpg" alt="bw portarit">
+                <img src="assets/pictures/7.jpg" alt="bw portarit">
+                <img src="assets/pictures/8.jpg" alt="bw portarit">
+                <img src="assets/pictures/9.jpg" alt="bw portarit">
+                <img src="assets/pictures/10.jpg" alt="bw portarit">
+                <img src="assets/pictures/11.jpg" alt="bw portarit">
+                <img src="assets/pictures/12.jpg" alt="bw portarit">
+                <img src="assets/pictures/13.jpg" alt="bw portarit">
+                <img src="assets/pictures/14.jpg" alt="bw portarit">
+                <img src="assets/pictures/15.jpg" alt="bw portarit">
+            </div>
+        </section>
+
+    </main>
     <!-- Footer -->
     <footer>
             <ul id="social">
