--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
     <!-- Inquiry Form -->
     <main>
-        <section class="contact">
+        <section id="form-bg" class="contact">
             <form class="inquiry-form" method="GET" action="request_submitted.html">
                 <!-- Inquiry Form heading -->
                 <h2>Please contact me for inquiries <i class="fa-regular fa-envelope fa-lg" style="color: #000000;"></i></h2>
