Fixed Media query for Portfolio

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <!-- Social Media icons link-->
     <script src="https://kit.fontawesome.com/3d32bfd3da.js" crossorigin="anonymous"></script>
   </head>
+
   <body>
     <!-- Header contains of logo and nav bar -->
-    <header>        
+    <header>
         <a href="index.html">
             <img id="logo" src="assets/pictures/LOGO.png" alt="35mm Photography logo">
         </a>
@@ -31,9 +32,9 @@
             <ul id="menu">
                 <li><a href="index.html" aria-label="Link to About and Home section">About</a></li>
                 <li><a href="portfolio.html" aria-label="Link to Portfolio section">Portfolio</a></li>
-                <li><a href="contact.html" aria-label="Contact Form">Contact</a></li>
+                <li><a href="contact.html" class="active" aria-label="Contact Form">Contact</a></li>
             </ul>
-        </nav>    
+        </nav>
     </header>
 
     <!-- About section -->
