--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-sharp fa-solid fa-ellipsis-vertical"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" aria-label="Link to About and Home section">About</a></li>
+                <li><a href="index.html" class="active" aria-label="Link to About and Home section">About</a></li>
                 <li><a href="portfolio.html" aria-label="Link to Portfolio section">Portfolio</a></li>
-                <li><a href="contact.html" class="active" aria-label="Contact Form">Contact</a></li>
+                <li><a href="contact.html" aria-label="Contact Form">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -40,41 +40,7 @@
     <!-- About section -->
     
     <main>
-    <div id="about">
-        <div id="about-text">
-            <h2>About</h2>
-            <br>
-            <p>Shauna James is a fashion and portrait photographer from Donegal who now lives and works in Dublin.
-            </p>
-            <p>
-            Starting her career, Shauna first picked up a camera at the early age of fourteen - influenced by self-portraiture
-            and conceptual photography.
-            Growing up with the rise of social media and digital techniques enabled Shauna to see the bigger picture of an
-            international industry.
-            After graduating college in Letterkenny Co. Donegal she made the move to Dublin, where she naturally felt the
-            transition to fashion photography.
-            </p>
-            <p>
-            Shauna enjoys creating timeless and emotive imagery. She is inspired by feminine strength, unique beauty and lasting
-            style.
-            </p>
-            <p>
-            She now hosts regular workshops and body positivity photography sessions photographing members of the public and in
-            a raw and unretouched style
-            to celebrate the diversity and variety of bodies that we don't always see in modern media.
-            </p>
-            <h2>Clients & Publications</h2>
-            <br>
-            <p>Air France, Amazon, Aveda, Avon, Blue Nile, Bare Minerals, Bobbi Brown, Chantecaille, Danielle Frankel, Erno Laszlo,
-            Estée Lauder, GRAFF Diamonds, Innisfree, Intermix, Kjaer Weis, Laura Mercier, Lancome, Lafayette 148, Lugano Diamonds,
-            Maybelline, Mary Kay, Moroccan Oil, Monique Lhuillier, NARS, Sachin & Babi, Saks, Shark Beauty, Natural Diamonds Council, 
-            The Jewelry Group, Wella.
-            </p>
-        </div>
-        <div id="about-image">
-            <img src="assets/pictures/about2.jpg" alt="Photographer">
-        </div>
-    </div>
+
     </main>
     <!-- Footer -->
     <footer>
