--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
     <!-- Inquiry Form -->
     <main>
         <section class="contact">
-            <form class="inquiry-form" method="GET" action="request_submitted.html">
+            <form class="inquiry-form" method="POST" action="request_submitted.html">
                 <!-- Inquiry Form heading -->
                 <h2>Please contact me for inquiries <i class="fa-regular fa-envelope fa-lg" style="color: #000000;"></i></h2>
                 <br>
