--- a/index.html
+++ b/index.html
@@ -38,10 +38,47 @@
     </header>
 
     <!-- About section -->
-    
     <main>
+        <div class="about-container">
+            <div class="about-text">
+                <h1>About</h1>
+                <br>
+                <p>
+                Shauna James is a fashion and portrait photographer from Donegal who now lives and works in Dublin.
+                </p>
+                <br>
+                <p>
+                Starting her career, Shauna first picked up a camera at the early age of fourteen - influenced by
+                self-portraiture and conceptual photography. Growing up with the rise of social media and digital 
+                techniques enabled Shauna to see the bigger picture of an international industry. After graduating 
+                college in Letterkenny Co. Donegal she made the move to Dublin, where she naturally felt
+                the transition to fashion photography.
+                </p>
+                <br>
+                <p>
+                Shauna enjoys creating timeless and emotive imagery. She is inspired by feminine strength, unique beauty and
+                lasting style.
+                </p>
+                <br>
+                <p>
+                She now hosts regular workshops and body positivity photography sessions photographing members of the public
+                and in a raw and unretouched style to celebrate the diversity and variety of bodies that we don't always see in modern media.
+                </p>
+            </div>
 
+             <div class="pic-ctn">
+                <img src="assets/pictures/1.jpg" alt="black and white photo" class="pic">
+                <img src="assets/pictures/3.jpg" alt="black and white photo" class="pic">
+                <img src="assets/pictures/5.jpg" alt="black and white photo" class="pic">
+                <img src="assets/pictures/6.jpg" alt="black and white photo" class="pic">
+                <img src="assets/pictures/7.jpg" alt="black and white photo" class="pic">
+                <img src="assets/pictures/8.jpg" alt="black and white photo" class="pic">
+                <img src="assets/pictures/14.jpg" alt="black and white photo" class="pic">
+                <img src="assets/pictures/15.jpg" alt="black and white photo" class="pic">
+            </div>
+        </div>
     </main>
+
     <!-- Footer -->
     <footer>
             <ul id="social">
