Form background file changed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Header contains of logo and nav bar -->
     <header>
-        <a href="index.html">
+        <a href="portfolio.html">
             <img id="logo" src="assets/pictures/LOGO.png" alt="35mm Photography logo">
         </a>
     <!-- Main navigation menu -->
