General updates about screen responsiveness

--- a/about.html
+++ b/about.html
@@ -24,39 +24,24 @@
 <body>
     <!-- Header contains of logo and nav bar -->
     <header>
-        <a href="index.html">
+        <a href="portfolio.html">
             <img id="logo" src="assets/pictures/LOGO.png" alt="35mm Photography logo">
         </a>
-    <!-- Main navigation menu -->
+        <!-- Main navigation menu -->
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-sharp fa-solid fa-ellipsis-vertical"></i></label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html" aria-label="Link to About and Home section">About</a></li>
-                <li><a href="portfolio.html" aria-label="Link to Portfolio section">Portfolio</a></li>
-                <li><a href="contact.html" class="active" aria-label="Contact Form">Contact</a></li>
+                <li><a href="portfolio.html" class="active" aria-label="Link to Portfolio section">Portfolio</a></li>
+                <li><a href="contact.html" aria-label="Contact Form">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Inquiry Form -->
-    <main>
-        <section class="contact">
-            <form class="inquiry-form" method="POST" action="request_submitted.html">
-                <!-- Inquiry Form heading -->
-                <h2>Please contact me for inquiries <i class="fa-regular fa-envelope fa-lg" style="color: #000000;"></i></h2>
-                <br>
-                <!-- Inquiry Form input -->
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" class="text-input" required>
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="email_address" class="text-input" required>
-                <label for="message">Message</label>
-                <textarea id="message" name="message" rows="40" cols="100" class="text-input" required></textarea>
-                <input type="submit" value="Send Message" class="button">
-            </form>
-        </section>
-    </main>
+    <!-- About section -->
+    <main></main>
+
     <!-- Footer -->
     <footer>
         <ul id="social">
@@ -77,6 +62,6 @@
             </li>
         </ul>
     </footer>
-</body>
-
-</html>
+    </body>
+    
+    </html>
