--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 <body>
     <!-- Header contains of logo and nav bar -->
     <header>
-        <a href="portfolio.html">
+        <a href="index.html">
             <img id="logo" src="assets/pictures/LOGO.png" alt="35mm Photography logo">
         </a>
     <!-- Main navigation menu -->
