Home page conent and background image adeed

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <body>
     <!-- Header contains of logo and nav bar -->
     <header>
-        <a href="portfolio.html">
+        <a href="index.html">
             <img id="logo" src="assets/pictures/LOGO.png" alt="35mm Photography logo">
         </a>
         <!-- Main navigation menu -->
@@ -32,15 +32,52 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-sharp fa-solid fa-ellipsis-vertical"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" aria-label="Link to About and Home section">About</a></li>
-                <li><a href="portfolio.html" class="active" aria-label="Link to Portfolio section">Portfolio</a></li>
+                <li><a href="index.html" aria-label="Link to About and Home section">Home</a></li>
+                <li><a href="about.html" class="active" aria-label="Link to About and Home section">About</a></li>
+                <li><a href="portfolio.html" aria-label="Link to Portfolio section">Portfolio</a></li>
                 <li><a href="contact.html" aria-label="Contact Form">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- About section -->
-    <main></main>
+    <main>
+        <section class="about" id="about">
+            <div class="about-container" id="about-container">
+                <div class="about-text" id="about-text">
+                    <div>
+                        <h1>About</h1>
+                        <br>
+                        <p>
+                            Shauna James is a fashion and portrait photographer from Donegal who now lives and works in Dublin.
+                        </p>
+                        <br>
+                        <p>
+                            Starting her career, Shauna first picked up a camera at the early age of fourteen - influenced by
+                            self-portraiture and conceptual photography. Growing up with the rise of social media and digital
+                            techniques enabled Shauna to see the bigger picture of an international industry. After graduating
+                            college in Letterkenny Co. Donegal she made the move to Dublin, where she naturally felt
+                            the transition to fashion photography.
+                        </p>
+                        <br>
+                        <p>
+                            Shauna enjoys creating timeless and emotive imagery. She is inspired by feminine strength, unique
+                            beauty and
+                            lasting style.
+                        </p>
+                        <br>
+                        <p>
+                            She now hosts regular workshops and body positivity photography sessions photographing members of
+                            the public
+                            and in a raw and unretouched style to celebrate the diversity and variety of bodies that we don't
+                            always see in modern media.
+                        </p>
+                    </div>
+                </div>
+        
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer>
