--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,8 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-sharp fa-solid fa-ellipsis-vertical"></i></label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" aria-label="Link to About and Home section">About</a></li>
+                <li><a href="index.html" aria-label="Link to About and Home section">Home</a></li>
+                <li><a href="about.html" aria-label="Link to About and Home section">About</a></li>
                 <li><a href="portfolio.html" class="active" aria-label="Link to Portfolio section">Portfolio</a></li>
                 <li><a href="contact.html" aria-label="Contact Form">Contact</a></li>
             </ul>
