Google maps were added to about section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2 class="home-content">“Black and white allows me to detach from the cliche ‘souvenir photo’ approach to
                 photography.” – Guy Gagnon
                 </h2>
-                <a href="about.html" class="button-home" aria-label="Enter">Visit</a>
+                <button onclick="location.href='about.html'" class="button-home" aria-label="Enter">Visit</button>
             </div>
         </section>
     </main>
