About section was edited

--- a/about.html
+++ b/about.html
@@ -74,15 +74,31 @@
                         </p>
                     </div>
                 </div>
-        
             </div>
         </section>
     </main>
 
     <!-- Footer -->
     <footer>
-        <iframe title="Map to Max Rehab location in Northpoint Business Park"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d615.1388858754697!2d-8.488506015307033!3d51.923819642151486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4844906116555f41%3A0xe853ebc90f09ff70!2s24%20Northpoint%20Business%20Park%2C%20Cork!5e0!3m2!1sen!2sie!4v1690491509685!5m2!1sen!2sie"
+        <ul id="contacts">
+            <li>
+                <span><i class="fas fa-phone"></i></span>
+                <a class="footer-link" href="tel:021-4389574">087-3465077</a>
+            </li>
+            <li>
+                <span><i class="fas fa-envelope"></i></span>
+                <a class="footer-link" href="mailto:35mm@phototgraphy.ie">35mm@photography.ie</a>
+            </li>
+            <li>
+                <span><i class="fas fa-location-arrow"></i></span> Fragrance House
+                Malahide Marina Village
+                Malahide
+                Co. Dublin
+            </li>
+        </ul>
+        <br>
+        <iframe title="Location of 35mm Photography studio"
+            src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2375.7370334124967!2d-6.15706812326174!3d53.4552868723211!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sFragrance%20House%20Malahide%20Marina%20Village%20Malahide%20Co.%20Dublin!5e0!3m2!1sen!2sie!4v1692832378741!5m2!1sen!2sie"
             allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <ul id="social">
             <li>
