Finished Home section

--- a/about.html
+++ b/about.html
@@ -67,9 +67,8 @@
                         </p>
                         <br>
                         <p>
-                            She now hosts regular workshops and body positivity photography sessions photographing members of
-                            the public
-                            and in a raw and unretouched style to celebrate the diversity and variety of bodies that we don't
+                            She now hosts regular workshops and body positivity photography sessions in her studio in Malahide photographing members of
+                            the public in a raw and unretouched style to celebrate the diversity and variety of bodies that we don't
                             always see in modern media.
                         </p>
                     </div>
