--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </a>
     </header>
 
-    <!-- About section -->
+    <!-- Home section -->
     <main>
         <section class="home">
             <div class="home-text">
@@ -52,4 +52,5 @@
             </ul>
     </footer>
   </body>
+  
 </html>
