--- a/portfolio.html
+++ b/portfolio.html
@@ -40,29 +40,29 @@
         </nav>
     </header>
 
-    <!-- Main content -->
+    <!-- Portfolio content -->
     <main>
         <section id="gallery">
             <div id="photos">
-                <img src="assets/pictures/1.jpg" alt="bw portarit">
-                <img src="assets/pictures/2.jpg" alt="bw portarit">
-                <img src="assets/pictures/3.jpg" alt="bw portarit">
-                <img src="assets/pictures/4.jpg" alt="bw portarit">
-                <img src="assets/pictures/5.jpg" alt="bw portarit">
-                <img src="assets/pictures/6.jpg" alt="bw portarit">
-                <img src="assets/pictures/7.jpg" alt="bw portarit">
-                <img src="assets/pictures/8.jpg" alt="bw portarit">
-                <img src="assets/pictures/9.jpg" alt="bw portarit">
-                <img src="assets/pictures/10.jpg" alt="bw portarit">
-                <img src="assets/pictures/11.jpg" alt="bw portarit">
-                <img src="assets/pictures/12.jpg" alt="bw portarit">
-                <img src="assets/pictures/13.jpg" alt="bw portarit">
-                <img src="assets/pictures/14.jpg" alt="bw portarit">
-                <img src="assets/pictures/15.jpg" alt="bw portarit">
+                <img src="assets/pictures/1.jpg" alt="Ana">
+                <img src="assets/pictures/2.jpg" alt="Julia">
+                <img src="assets/pictures/3.jpg" alt="James">
+                <img src="assets/pictures/4.jpg" alt="Andrea">
+                <img src="assets/pictures/5.jpg" alt="Patrick">
+                <img src="assets/pictures/6.jpg" alt="Jessica">
+                <img src="assets/pictures/7.jpg" alt="Kate">
+                <img src="assets/pictures/8.jpg" alt="Alexandra">
+                <img src="assets/pictures/9.jpg" alt="Alexandra2">
+                <img src="assets/pictures/10.jpg" alt="Kris">
+                <img src="assets/pictures/11.jpg" alt="Pam">
+                <img src="assets/pictures/12.jpg" alt="Lolita">
+                <img src="assets/pictures/13.jpg" alt="Kendall">
+                <img src="assets/pictures/14.jpg" alt="Alexandra3">
+                <img src="assets/pictures/15.jpg" alt="Alexandra4">
             </div>
         </section>
-
     </main>
+
     <!-- Footer -->
     <footer>
             <ul id="social">
